# demo-rust-simple-curd-auth

./: .gitignore
be-rust/: Cargo.toml
be-rust/key/: private.pem  public.pem
be-rust/src/: app_state.rs  main.rs
be-rust/src/domain/: user.rs
be-rust/src/dto/: api_res.rs  filter_query.rs  jwt_key.rs  login_req.rs  login_res.rs  mod.rs  pagination.rs  token_claim.rs  user_pag_req.rs  user_req.rs  user_res.rs
be-rust/src/http/: auth_handler.rs  mod.rs  routes.rs  user_handler.rs
be-rust/src/middleware/: auth_rs256.rs  mod.rs  require_auth_layer.rs
be-rust/src/repository/: mod.rs  user_repo.rs  user_repo_impl.rs
be-rust/src/service/: auth_service.rs  auth_service_impl.rs  mod.rs  user_service.rs  user_service_impl.rs
fe-tauri-ts/: package.json  vite.config.ts
fe-tauri-ts/src/: App.tsx  main.tsx
fe-tauri-ts/src-tauri/: Cargo.toml  tauri.conf.json
fe-tauri-ts/src-tauri/src/: lib.rs  login.rs  main.rs
fe-tauri-ts/src/components/: DataTable.tsx  DeleteConfirmModalProps.tsx  Layout.tsx  Pagination.tsx  ProtectedRoute.tsx  RawTable.tsx  Sidebar.tsx  Topbar.tsx
fe-tauri-ts/src/contexts/: AuthContext.tsx  PageContext.tsx
fe-tauri-ts/src/pages/: FormUser.tsx  Home.tsx  Login.tsx
fe-tauri-ts/src/services/: api.ts  auth.ts  userService.ts
fe-tauri-ts/src/styles/: App.css  Form.css  Home.css  Layout.css  Login.css
